--- a/pom.xml
+++ b/pom.xml
@@ -58,4 +58,23 @@
         </dependency>
 
     </dependencies>
+
+    <!-- we use <includes> tag to run our runner classes from pom.xml file -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <includes>
+                        <include>**/*RunnerClass.java</include>
+                        <!-- between <include> tags we pass what we want to run;
+                         ** -> project repository till source; /* -> another package; name of the class -->
+                    </includes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
